2001-02-07  Ryan Nunn <triforce@merlin.net.au>
	* tools/expack.cc : Finally fixed the Win32 End of Line problem. 

2001-02-07  Tristan Tarrant  <nadir@users.sourceforge.net>
	* Makefile.be, Makefile.win32, Makefile.cygwin, configure.in: 
	  set version to 0.91alpha2

2001-02-07  Christoph Reichenbach  <jameson@linuxgames.com>
	* files/utils.cc (U7open): Explicitly exported two U7open functions

2001-02-08  Ryan Nunn <triforce@merlin.net.au>
	* tools/expack.cc: Added .txt file detection to fix some bugs caused 
	  by "stupid dos conventions".
	* files/utils.cc: I removed the "bad code" ;)
	* Makefile.*, data/defaultkeys.txt, data/flx.in, data/Makefile.am:
	  Renamed "data/default.key" to "data/defaultkeys.txt"
	* Makefile.cygwin: make install will now create data dir
	  
2001-02-07  Christoph Reichenbach  <jameson@linuxgames.com>
	* files/utils.h: #ifndef'd inclusion of iosfwd
	* shapes/items.h: #ifndef'd inclusion of iosfwd
	* actorio.cc: Fixed "subscript out of range" problem
	* configure.in: Added check for DEC CXX on Alpha/Linux

2001-02-06  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.be, exult_types.h, actors.cc: building on BeOS again

2001-02-07  Ryan Nunn <triforce@merlin.net.au>
	* tools/expack.cc, files/utils.*: Removed the Win32 fix and replaced it
	  with text file reading modes.
	  
2001-02-06  Tristan Tarrant  <nadir@users.sourceforge.net>
	* FAQ: added Dominik's FAQ to the distribution
	* */Makefile.am, configure.in: get "make dist" to work

2001-02-07  Ryan Nunn <triforce@merlin.net.au>
	* tools/expack.cc: Fix end of line bug on Win32

2001-02-06  Tristan Tarrant  <nadir@users.sourceforge.net>
	* tools/expack.cc: allow -i to create flex archives from files not
	  in the current directory

2001-02-06  Tristan Tarrant  <nadir@users.sourceforge.net>
	* tools/expack.cc: fix -c behaviour
	* Makefile.cygwin, Makefile.win32: use new -i switch for expack

	Fixed once and for all "alpha_kludges.h" ugliness:
